--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,58 @@
 body {
-     color: black;
+    color: black;
 }
 
 body {
     background-color: rgba(255, 255, 210, 1);
-    background-image: url("../img/13783.png") ;
-    background-size: cover ;
+    background-image: url("../img/13783.png");
+    background-size: cover;
 }
 
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: justify;
-    text-shadow: 3px 5px 5px cadetblue;
+    text-shadow: 3px 5px 5px rgb(0, 8, 8);
 }
 
-#boton{
-    background-color: rgba(255, 255, 210, 1);
-    background-image: url("../img/ioj.avif") ;
-    background-size: cover ;
+#boton {
+    background-color: beige1;
+    background-image: url("../img/ioj-removebg-preview.png");
+    background-size: cover;
     height: 75px;
     width: 120px
+}
 
+#Edad {
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
+}
 
-    ;
+#nombre {
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
+}
+
+#centro {
+
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
+}
+
+#infraestructura {
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
+}
+
+#telefono {
+    border: 4px rgb(11, 204, 146) ridge;
+}
+
+#equipo {
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
+}
+
+#jugador {
+    border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
 }
