--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 body {
     color: black;
+    background-size: 200px;
 }
+
 
 body {
     background-color: rgba(255, 255, 210, 1);
@@ -10,7 +12,7 @@ body {
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: justify;
+    text-align: center;
     text-shadow: 3px 5px 5px rgb(0, 8, 8);
 }
 
@@ -55,4 +57,11 @@ body {
 #jugador {
     border: 4px rgb(11, 204, 146) ridge;
     border-radius: 10px;
+}
+#genero{
+    text-align: justify;
+}
+
+#zona{
+    text-align: justify;
 }
