--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,23 @@
 body {
-    color: black;
+    font-family:inherit;
+    color: whitesmoke;
     background-size: 200px;
 }
 
 
 body {
     background-color: rgba(255, 255, 210, 1);
-    background-image: url("../img/13783.png");
-    background-size: cover;
+    background-image: url("../img/fc-bayern-munich-2560x1080-14118.jpg");
+    background-size: cover
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
+    text-align: justify;
     text-shadow: 3px 5px 5px rgb(0, 8, 8);
 }
 
 #boton {
-    background-color: beige1;
+    background-color:black;
     background-image: url("../img/ioj-removebg-preview.png");
     background-size: cover;
     height: 75px;
@@ -34,19 +34,9 @@ body {
     border-radius: 10px;
 }
 
-#centro {
-
-    border: 4px rgb(11, 204, 146) ridge;
-    border-radius: 10px;
-}
-
-#infraestructura {
-    border: 4px rgb(11, 204, 146) ridge;
-    border-radius: 10px;
-}
-
 #telefono {
     border: 4px rgb(11, 204, 146) ridge;
+    border-radius: 10px;
 }
 
 #equipo {
@@ -58,10 +48,4 @@ body {
     border: 4px rgb(11, 204, 146) ridge;
     border-radius: 10px;
 }
-#genero{
-    text-align: justify;
-}
 
-#zona{
-    text-align: justify;
-}
